@@ -1,13 +1,18 @@
-$Id: ChangeLog,v 1.71.2.2 2010/01/16 09:43:06 tho Exp $
+$Id: ChangeLog,v 1.71.2.3 2010/01/20 12:25:07 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU X.Y.Z
 	- [config] u_config_print_to_fp with brace delimiters for
 	           children records + doxy fixes (by Mickael Auger)
+	- [config] don't dump the 'include' directive when serializing and/or
+	           saving an u_config_t object to file (would break semantical
+	           equivalence)
 	- [hmap] added u_hmap_foreach_arg which accepts a user defined parameter
 	- [buf] minor fix in u_buf_printf resize algorithm
 	- [misc] fix a bad cast in u_snprintf and u_path_snprintf
+	- [misc] additional underflow/overflow checks in u_atoi function when 
+	         sizeof(long) != sizeof(int)
 	- [test] minor fix in test module
 
 LibU 1.4.1
